client/src/App.css
.App {
  text-align: left;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

h2 {
  padding-left: 10px;
}

/* h3 {
  text-align: center;
} */

/* .icon {
  height: 75px;
  width: 75px;
  margin-right: 10px;
} */

.teamPage-icon {
  height: 200px;
  width: auto;
}

.team-header {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.team-col-one {
  /* padding-right: 20px;
  margin-right: 50px; */
  text-align: center;
}

.team-col-two {
  padding-top: 50px;
}

.form-fields {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.create-team {
  width: 500px;
}

.form-body {
  margin-top: 15px;
  margin-left: 30px;
}

.create-title {
  font-size: 300%;
}

.homepage-body {
  background-image: './background-image-field.jpg';
  background-size: 'cover';
  text-align: center;
}

.roster-list {
  text-align: center;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
} 

.roster-listItem {
  text-align: center;
}

.team-button-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.team-button {
  margin-right: 10px;
  margin-top: 10px;
}

.roster-button {
  margin-bottom: 10px;
  margin-top: 5px;
}

.list-group {
  width: 720px;
  margin: 10px auto;
}

.list-group-item {
  margin-top: 10px;
  display: grid;
  grid-template-rows: 30px 30px 30px 30px;
  grid-template-columns: 240px 240px 240px;
}

.icon {
  height: 80px;
  width: 80px;
  margin: 5px auto;
  grid-row: 1 / span 2;
  grid-column: 1 / span 1;
  text-align: center;
}

.team-name {
  grid-row: 3 / span 2;
  grid-column: 1 / span 1;
  margin: 20px auto;
}

.view-team {
  width: 160px;
}

.teams-description {
  margin-top: 15px;
}

.create-team {
  margin-top: 10px;
  width: 220px;
}

.playerPage {
  margin: 10px auto;
  text-align: center;
}

/* .parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
} */

